Changing get(0) to getFirst() and renaming branch